Add version input on all platforms

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -90,7 +90,7 @@ jobs:
           export OS="mac"
           source ./ci/setup-env.sh
           source ./ci/test.sh
-          source ./ci/build.sh "${{ matrix.project }}"
+          source ./ci/build.sh "${{ matrix.project }}" "${{ matrix.version }}"
         shell: bash
 
       - name: Download Packages installer build tool
@@ -166,7 +166,7 @@ jobs:
           export OS="win"
           source ./ci/setup-env.sh
           source ./ci/test.sh
-          source ./ci/build.sh "${{ matrix.project }}"
+          source ./ci/build.sh "${{ matrix.project }}" "${{ matrix.version }}"
         shell: bash
       
       - name: Compile .ISS to .EXE Installer
