--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: "${{ matrix.project }}-${{ matrix.version }}"
+          name: "${{ matrix.project }}-${{ matrix.version }}-linux"
           path: bin
           retention-days: 7
   build-macos:
@@ -130,7 +130,7 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: "${{ matrix.project }}-${{ matrix.version }}"
+          name: "${{ matrix.project }}-${{ matrix.version }}-macos"
           path: bin
           retention-days: 7
   build-windows:
@@ -180,6 +180,6 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: "${{ matrix.project }}-${{ matrix.version }}"
+          name: "${{ matrix.project }}-${{ matrix.version }}-windows"
           path: bin
           retention-days: 7
