--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/Chowdhury-DSP/chowdsp_utils.git
 [submodule "modules/juce_sharedtexture"]
 	path = modules/juce_sharedtexture
-	url = git@github.com:jameshball/juce_sharedtexture.git
+	url = https://github.com/jameshball/juce_sharedtexture.git
