--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/osci_render_addon"]
 	path = modules/osci_render_core
 	url = git@github.com:jameshball/osci_render_core.git
+[submodule "modules/osci_render_core"]
+	path = modules/osci_render_core
+	url = git@github.com:jameshball/osci_render_core.git
