--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,8 +69,9 @@ jobs:
           echo "FULL_PATH=$FULL_PATH" >> $GITHUB_OUTPUT
           echo "Early test upload path: $FULL_PATH"
 
-      - name: Create remote directory on MEGA (TEMP)
-        if: env.EARLY_MEGA_TEST == 'true'
+      # Linux: use existing GitHub Action (works only on Linux runners)
+      - name: Create remote directory on MEGA (Linux TEMP)
+        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'Linux'
         uses: Difegue/action-megacmd@master
         env:
           USERNAME: ${{ secrets.MEGA_USERNAME }}
@@ -78,14 +79,62 @@ jobs:
         with:
           args: mkdir -p ${{ steps.mega_path_early.outputs.FULL_PATH }}
 
-      - name: Upload dummy binaries to MEGA (TEMP)
-        if: env.EARLY_MEGA_TEST == 'true'
+      - name: Upload dummy binaries to MEGA (Linux TEMP)
+        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'Linux'
         uses: Difegue/action-megacmd@master
         env:
           USERNAME: ${{ secrets.MEGA_USERNAME }}
           PASSWORD: ${{ secrets.MEGA_PASSWORD }}
         with:
           args: put -c bin ${{ steps.mega_path_early.outputs.FULL_PATH }}/
+
+      # macOS: install MEGAcmd via Homebrew cask and upload directly
+      - name: Install MEGAcmd (macOS TEMP)
+        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'macOS'
+        shell: bash
+        run: |
+          brew update --preinstall >/dev/null 2>&1 || true
+          brew install --cask megacmd
+          echo "/Applications/MEGAcmd.app/Contents/MacOS" >> $GITHUB_PATH
+          ls /Applications/MEGAcmd.app/Contents/MacOS || true
+          mega-version || echo "megacmd version command not available yet"
+
+      - name: Upload dummy binaries to MEGA (macOS TEMP)
+        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'macOS'
+        shell: bash
+        env:
+          MEGA_USERNAME: ${{ secrets.MEGA_USERNAME }}
+          MEGA_PASSWORD: ${{ secrets.MEGA_PASSWORD }}
+        run: |
+          set -euo pipefail
+          mega-login "$MEGA_USERNAME" "$MEGA_PASSWORD"
+          mega-mkdir -p "${{ steps.mega_path_early.outputs.FULL_PATH }}"
+            # Use -c to allow continuation if re-run
+          mega-put -c bin "${{ steps.mega_path_early.outputs.FULL_PATH }}/"
+          mega-logout --keep-session || true
+
+      # Windows: install MEGAcmd via Chocolatey and upload directly
+      - name: Install MEGAcmd (Windows TEMP)
+        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'Windows'
+        shell: powershell
+        run: |
+          choco install megacmd -y --no-progress
+          echo "$env:LOCALAPPDATA\MEGAcmd" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          Get-ChildItem "$env:LOCALAPPDATA\MEGAcmd" | Select-Object -First 10 | Format-List || Write-Host "Listing failed"
+          mega-version || Write-Host "megacmd version command not available yet"
+
+      - name: Upload dummy binaries to MEGA (Windows TEMP)
+        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'Windows'
+        shell: powershell
+        env:
+          MEGA_USERNAME: ${{ secrets.MEGA_USERNAME }}
+          MEGA_PASSWORD: ${{ secrets.MEGA_PASSWORD }}
+        run: |
+          set -e
+          mega-login "$env:MEGA_USERNAME" "$env:MEGA_PASSWORD"
+          mega-mkdir -p "${{ steps.mega_path_early.outputs.FULL_PATH }}"
+          mega-put -c bin "${{ steps.mega_path_early.outputs.FULL_PATH }}/"
+          mega-logout --keep-session
 
       - name: Early exit notice (TEMP)
         if: env.EARLY_MEGA_TEST == 'true'
