--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,7 +67,8 @@ jobs:
             echo "::error::Missing Jucer file $JUCER_FILE" >&2
             exit 1
           fi
-          PROJECT_VERSION=$(grep -Po 'version="\K[0-9]+(\.[0-9]+)*' "$JUCER_FILE" | head -n1)
+          # Use Python's XML parser for portability (grep -P not available on macOS/Windows)
+          PROJECT_VERSION=$(python3 -c "import xml.etree.ElementTree as ET,sys;\nroot=ET.parse('$JUCER_FILE').getroot();\nprint(root.attrib.get('version',''))" 2>/dev/null || true)
           if [[ -z "$PROJECT_VERSION" ]]; then
             echo "::error::Could not parse version from $JUCER_FILE" >&2
             exit 1
