--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -150,10 +150,27 @@ jobs:
           MEGA_PASSWORD: ${{ secrets.MEGA_PASSWORD }}
         run: |
           $ErrorActionPreference = 'Stop'
-          mega-login "$env:MEGA_USERNAME" "$env:MEGA_PASSWORD"
+          # Trim potential CR/LF or whitespace from secrets (sometimes happens with copy/paste when setting secrets)
+          $u = ($env:MEGA_USERNAME | ForEach-Object { $_.Trim() })
+          $p = ($env:MEGA_PASSWORD | ForEach-Object { $_.Trim() })
+          if (-not $u -or -not $p) { Write-Error "MEGA credentials empty after trim" }
+          Write-Host "Attempting mega-login for user length: $($u.Length)"
+          # Use --auth-code style not available; rely on standard login but detect failure via exit code & output
+          $loginOutput = mega-login "$u" "$p" 2>&1
+          if ($LASTEXITCODE -ne 0 -or ($loginOutput -match 'Login failed')) {
+            Write-Host "mega-login output (masked):" ($loginOutput -replace [Regex]::Escape($u), '***')
+            Write-Error "mega-login failed"
+          }
+          else {
+            Write-Host "mega-login succeeded"
+          }
           # Upload individual files (mega-put -c will create path if needed)
-          Get-ChildItem bin | ForEach-Object { mega-put -c $_.FullName "${{ steps.mega_path_early.outputs.FULL_PATH }}/" }
-          mega-logout --keep-session
+          Get-ChildItem bin | ForEach-Object {
+            Write-Host "Uploading $_";
+            mega-put -c $_.FullName "${{ steps.mega_path_early.outputs.FULL_PATH }}/" | ForEach-Object { $_ }
+            if ($LASTEXITCODE -ne 0) { Write-Error "Upload failed for $($_.FullName)" }
+          }
+          mega-logout --keep-session || Write-Warning "mega-logout returned non-zero"
 
       - name: Early exit notice (TEMP)
         if: env.EARLY_MEGA_TEST == 'true'
