--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,9 +10,6 @@ jobs:
   build:
     name: Build (${{ matrix.project }} ${{ matrix.version }} @ ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
-    # TEMP: Early MEGA upload test. Set to 'false' or remove to restore normal build.
-    env:
-      EARLY_MEGA_TEST: 'true'
     strategy:
       fail-fast: false
       matrix:
@@ -46,123 +43,23 @@ jobs:
             echo "OS_ARTIFACT=windows" >> $GITHUB_ENV
           fi
 
-      # ================= TEMP EARLY MEGA TEST SECTION (can be removed later) =================
-      - name: Create dummy bin artifacts (TEMP)
-        if: env.EARLY_MEGA_TEST == 'true'
+      - name: Extract project version
+        id: version
         shell: bash
         run: |
-          mkdir -p bin
-          echo "Dummy build artifact for ${{ matrix.project }} ${{ matrix.version }} ${{ env.OS_ARTIFACT }}" > bin/${{ matrix.project }}-${{ matrix.version }}-${{ env.OS_ARTIFACT }}.txt
-          echo "Timestamp: $(date -u)" > bin/BUILD_INFO.txt
-          echo "ID=${{ matrix.project }}-${{ matrix.version }}-${{ env.OS_ARTIFACT }}" >> bin/BUILD_INFO.txt
-
-      - name: Prepare MEGA upload path (TEMP)
-        if: env.EARLY_MEGA_TEST == 'true'
-        id: mega_path_early
-        shell: bash
-        run: |
-          # Extract version attribute from the project's .jucer XML file
-          JUCER_FILE="${{ matrix.project }}.jucer"
-          if [[ ! -f "$JUCER_FILE" ]]; then
-            echo "::error::Missing Jucer file $JUCER_FILE" >&2
-            exit 1
-          fi
-          # Use dedicated Python helper script for consistent extraction
-          if ! command -v python3 >/dev/null 2>&1; then
-            echo "::error::python3 not found on runner" >&2
-            exit 1
-          fi
-          chmod +x ci/extract_version.py || true
-          PROJECT_VERSION=$(python3 ci/extract_version.py "$JUCER_FILE" || true)
-          if [[ -z "$PROJECT_VERSION" ]]; then
-            echo "::group::DEBUG JUCER FILE SNIPPET"; head -n15 "$JUCER_FILE"; echo "::endgroup::"
-            echo "::error::Could not parse version from $JUCER_FILE via python" >&2
-            exit 1
-          fi
-          # Final desired path: /<project>/<version> (e.g. /osci-render/2.6.1.0)
-          FULL_PATH="/${{ matrix.project }}/$PROJECT_VERSION"
-          echo "PROJECT_VERSION=$PROJECT_VERSION" >> $GITHUB_OUTPUT
-          echo "FULL_PATH=$FULL_PATH" >> $GITHUB_OUTPUT
-          echo "Early test upload path (no timestamp): $FULL_PATH"
-
-      # Linux: install MEGAcmd via apt
-      - name: Install MEGAcmd (Linux TEMP)
-        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'Linux'
-        shell: bash
-        run: |
-          set -euo pipefail
-          # Install MEGAcmd via direct .deb download (requested method)
-          wget https://mega.nz/linux/repo/xUbuntu_24.04/amd64/megacmd-xUbuntu_24.04_amd64.deb
-          sudo apt-get update -y
-          sudo apt install -y "$PWD/megacmd-xUbuntu_24.04_amd64.deb" || { echo "::error::Failed to install megacmd"; exit 1; }
-          mega-version || true
-
-      - name: Upload dummy binaries to MEGA (Linux TEMP)
-        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'Linux'
-        shell: bash
-        run: |
-          set -euo pipefail
-          mega-login "${{ secrets.MEGA_USERNAME }}" "${{ secrets.MEGA_PASSWORD }}"
-          mega-put -c bin/* "${{ steps.mega_path_early.outputs.FULL_PATH }}/" || mega-put -c bin "${{ steps.mega_path_early.outputs.FULL_PATH }}/"
-          mega-logout --keep-session || true
-
-      # macOS: install MEGAcmd via Homebrew cask and upload directly
-      - name: Install MEGAcmd (macOS TEMP)
-        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'macOS'
-        shell: bash
-        run: |
-          brew update --preinstall >/dev/null 2>&1 || true
-          brew install --cask megacmd
-          echo "/Applications/MEGAcmd.app/Contents/MacOS" >> $GITHUB_PATH
-          ls /Applications/MEGAcmd.app/Contents/MacOS || true
-          mega-version || echo "megacmd version command not available yet"
-
-      - name: Upload dummy binaries to MEGA (macOS TEMP)
-        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'macOS'
-        shell: bash
-        run: |
-          set -euo pipefail
-          mega-login "${{ secrets.MEGA_USERNAME }}" "${{ secrets.MEGA_PASSWORD }}"
-          mega-put -c bin/* "${{ steps.mega_path_early.outputs.FULL_PATH }}/" || mega-put -c bin "${{ steps.mega_path_early.outputs.FULL_PATH }}/"
-          mega-logout --keep-session || true
-
-      # Windows: install MEGAcmd via Chocolatey and upload directly
-      - name: Install MEGAcmd (Windows TEMP)
-        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'Windows'
-        shell: powershell
-        run: |
-          choco install megacmd -y --no-progress
-          echo "$env:LOCALAPPDATA\MEGAcmd" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-          try { Get-ChildItem "$env:LOCALAPPDATA\MEGAcmd" | Select-Object -First 10 | Format-List } catch { Write-Host "Listing failed: $($_.Exception.Message)" }
-          if (Get-Command mega-version -ErrorAction SilentlyContinue) { mega-version } else { Write-Host "megacmd version command not available yet" }
-
-      - name: Upload dummy binaries to MEGA (Windows TEMP)
-        if: env.EARLY_MEGA_TEST == 'true' && runner.os == 'Windows'
-        shell: powershell
-        run: |
-          $ErrorActionPreference = 'Stop'
-          mega-login "${{ secrets.MEGA_USERNAME }}" "${{ secrets.MEGA_PASSWORD }}"
-          # Upload individual files (mega-put -c will create path if needed)
-          Get-ChildItem bin | ForEach-Object { mega-put -c $_.FullName "${{ steps.mega_path_early.outputs.FULL_PATH }}/" }
-          mega-logout --keep-session
-
-      - name: Early exit notice (TEMP)
-        if: env.EARLY_MEGA_TEST == 'true'
-        shell: bash
-        run: |
-          echo "::notice::EARLY_MEGA_TEST enabled - skipping full build & packaging steps." 
-          # Skip remaining steps by setting a flag (conditions below check for != true)
-
-      # ================= END TEMP EARLY MEGA TEST SECTION =================
+          python3 ci/extract_version.py "${{ matrix.project }}.jucer" > version.txt
+          PROJECT_VERSION=$(cat version.txt)
+          echo "version=$PROJECT_VERSION" >> $GITHUB_OUTPUT
+          echo "Using project version: $PROJECT_VERSION"
 
       # macOS specific: setup Xcode and import certificates (skipped in EARLY_MEGA_TEST)
       - uses: maxim-lobanov/setup-xcode@v1
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         with:
           xcode-version: latest
 
       - name: Import application certificates
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         uses: apple-actions/import-codesign-certs@v3
         with:
           keychain: oscirender
@@ -171,7 +68,7 @@ jobs:
           p12-password: ${{ secrets.APPLE_APPLICATION_CERTIFICATE_PASSWORD }}
 
       - name: Import installer certificates
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         uses: apple-actions/import-codesign-certs@v3
         with:
           keychain: oscirender
@@ -182,15 +79,14 @@ jobs:
 
       # Windows specific: NuGet setup
       - name: Setup NuGet.exe for use with actions
-        if: matrix.os == 'windows-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'windows-latest'
         uses: NuGet/setup-nuget@v1.0.5
 
       - name: NuGet Sources
-        if: matrix.os == 'windows-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'windows-latest'
         run: nuget sources
 
       - name: Run build & tests
-        if: env.EARLY_MEGA_TEST != 'true'
         shell: bash
         run: |
           source ./ci/setup-env.sh
@@ -199,29 +95,29 @@ jobs:
 
       # macOS packaging & notarization
       - name: Download Packages installer build tool
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         run: wget http://s.sudre.free.fr/files/Packages_1211_dev.dmg
 
       - name: Mount Packages image
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         run: hdiutil attach Packages_1211_dev.dmg
 
       - name: Install Packages
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         run: sudo installer -pkg /Volumes/Packages\ 1.2.11/Install\ Packages.pkg -target /
 
       - name: Build installer (macOS pkg)
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         run: packagesbuild --project "packaging/${{ matrix.project }}.pkgproj"
 
       - name: Sign installer (macOS pkg)
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         run: |
           productsign -s "${{ secrets.APPLE_DEVELOPER_ID_INSTALLER }}" "packaging/build/${{ matrix.project }}.pkg" "bin/${{ matrix.project }}-${{ matrix.version }}.pkg"
           pkgutil --check-signature "bin/${{ matrix.project }}-${{ matrix.version }}.pkg"
 
       - name: Notarize installer (macOS)
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         uses: lando/notarize-action@v2
         with:
           product-path: "bin/${{ matrix.project }}-${{ matrix.version }}.pkg"
@@ -233,22 +129,65 @@ jobs:
           verbose: true
 
       - name: Staple installer (macOS)
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         run: xcrun stapler staple "bin/${{ matrix.project }}-${{ matrix.version }}.pkg"
 
       - name: Check installer (macOS)
-        if: matrix.os == 'macos-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'macos-latest'
         run: spctl -a -vvv -t install "bin/${{ matrix.project }}-${{ matrix.version }}.pkg"
 
       # Windows packaging (Inno Setup)
       - name: Compile .ISS to .EXE Installer
-        if: matrix.os == 'windows-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'windows-latest'
         uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
         with:
           path: "packaging/${{ matrix.project }}.iss"
 
       - name: Move installer to bin (Windows)
-        if: matrix.os == 'windows-latest' && env.EARLY_MEGA_TEST != 'true'
+        if: matrix.os == 'windows-latest'
         shell: bash
         run: mv "packaging/build/${{ matrix.project }}.exe" "bin/${{ matrix.project }}-${{ matrix.version }}.exe"
-      # (Final MEGA upload happens earlier in EARLY_MEGA_TEST)
+
+      # Combined MEGA upload (Unix)
+      - name: Upload binaries to MEGA (Linux/macOS)
+        if: runner.os != 'Windows'
+        shell: bash
+        run: |
+          set -euo pipefail
+          # Install MEGAcmd per platform
+          if [[ "${{ runner.os }}" == "Linux" ]]; then
+            wget -q https://mega.nz/linux/repo/xUbuntu_24.04/amd64/megacmd-xUbuntu_24.04_amd64.deb
+            sudo apt-get update -y >/dev/null
+            sudo apt-get install -y ./megacmd-xUbuntu_24.04_amd64.deb >/dev/null
+          else
+            brew install --cask megacmd
+            echo "/Applications/MEGAcmd.app/Contents/MacOS" >> $GITHUB_PATH
+          fi
+          mega-login "${{ secrets.MEGA_USERNAME }}" "${{ secrets.MEGA_PASSWORD }}"
+          DEST="/${{ matrix.project }}/${{ steps.version.outputs.version }}"
+          ls -1 bin || true
+          # Upload all produced artifacts (files only) into version directory
+          shopt -s nullglob
+          for f in bin/*; do
+            if [[ -f "$f" ]]; then
+              echo "Uploading $f -> $DEST"
+              mega-put -c "$f" "$DEST/"
+            fi
+          done
+          mega-logout
+
+      # Combined MEGA upload (Windows)
+      - name: Upload binaries to MEGA (Windows)
+        if: runner.os == 'Windows'
+        shell: powershell
+        run: |
+          $ErrorActionPreference = 'Stop'
+          choco install megacmd -y --no-progress
+          echo "$env:LOCALAPPDATA\MEGAcmd" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          mega-login "${{ secrets.MEGA_USERNAME }}" "${{ secrets.MEGA_PASSWORD }}"
+          $dest = "/${{ matrix.project }}/${{ steps.version.outputs.version }}"
+          Get-ChildItem bin -File | ForEach-Object {
+            Write-Host "Uploading $($_.FullName) -> $dest"
+            mega-put -c $_.FullName $dest/
+          }
+          mega-logout
