--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -137,6 +137,10 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: spctl -a -vvv -t install "bin/${{ matrix.project }}-${{ matrix.version }}.pkg"
 
+      - name: List files
+        run: Get-ChildItem -Recurse ${{ github.workspace }}
+        shell: pwsh
+
       # Windows packaging (Inno Setup)
       - name: Compile .ISS to .EXE Installer
         if: matrix.os == 'windows-latest'
