Use chinese-postman shared submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 	path = modules/LuaJIT
 	url = https://luajit.org/git/luajit.git
 	ignore = untracked
+[submodule "Source/chinese_postman"]
+	path = Source/chinese_postman
+	url = git@github.com:jameshball/chinese-postman.git
